--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
@@ -19,7 +20,7 @@
                 <img src="task.svg" alt="LOGO" class="logo">
             </div>
             <div class="col-12 col-md-5 m-1 text-center">
-                <h2><i class="fas fa-sticky-note"></i> ToDo App</h2>
+                <h2><i class="fas fa-sticky-note" style="color: #6C63FF;"></i> <span class="todo"> &nbspToDo App</span></h2>
                 <div class="todo-container container text-center mt-5">
                     <input type="text" placeholder="Enter any task" class="form-control todo-input" id="task">
                     <button class="btn btn-dark task" id="taskbtn">Add new Task</button>
