--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
     
-    <div class="container mt-5">
+    <div class="container" style="margin-top: 5rem;">
         <div class="row">
-            <div class="col-12 col-md-5 m-1 text-center">
+            <div class="col-12 col-md-5 m-5 text-center">
                 <img src="task.svg" alt="LOGO" class="logo">
             </div>
-            <div class="col-12 col-md-5 m-1 text-center">
+            <div class="col-12 col-md-5 m-1 text-center"">
                 <h2><i class="fas fa-sticky-note" style="color: #6C63FF;"></i> <span class="todo"> &nbspToDo App</span></h2>
-                <div class="todo-container container text-center mt-5">
+                <div class="todo-container container text-center mt-4">
                     <input type="text" placeholder="Enter any task" class="form-control todo-input" id="task">
                     <button class="btn btn-dark task" id="taskbtn">Add new Task</button>
                     <div id="todoList">
