--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 </head>
 <body>
     
+    <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
+      </label>
+      <span>Dark Mode!</span>
+    </div>
+
     <div class="container" style="margin-top: 5rem;">
         <div class="row">
             <div class="col-12 col-md-5 m-5 text-center">
